2007-09-05  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/Camera.cs: Made the interop methods private as opposed to
	  internal - no need to be visible outside the class scope.

2007-09-05   <> 

	* libgphoto2-sharp.mdp, src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/CameraList.cs,
	  src/Base/Object.cs, src/Base/Camera.cs, src/Base/CameraFile.cs,
	  src/Base/CameraAbilitiesList.cs: Updated methods to use the
	  Error.CheckError method instead of manually doing if(Error.IsError())
	  throw ErrorException(). Added calls to Error.CheckError() where they
	  were missing previously.

2007-07-19  Patrick van Staveren  <trick@vanstaveren.us>

	* CameraFilesystem.cs: revert improperly implemented cacheing

2007-07-18  Patrick van Staveren  <trick@vanstaveren.us>

	* CameraList.cs, CameraFilesystem.cs: Lots of whitespace cleanups
	* CameraFilesystem.cs: these aren't unsafe, so stop marking them
	so.  Also, cache getting the list of files and folders.  Will make
	use of this soon :)

2007-02-22  Patrick van Staveren <trick@vanstaveren.us>

	* src/Base/CameraFile.cs: add another constructor to allow passing
	of integer file descriptor.

2007-02-04  Patrick van Staveren <trick@vanstaveren.us> 

	* libgphoto2-sharp.mdp: Updated MonoDevelop project
	
	* src/Base/ErrorCodes.cs: Updated to match newer error code values
	
	* src: updated svn:ignore

2007-01-31  Patrick van Staveren  <trick@vanstaveren.us>

	* src/{File,Camera,Detector}.cs: Starting to prototype fully OO
	classes.

	* configure.ac: Use gmcs rather than mcs, to give us .NET 2.0
	features (collections, for one).  Both Banshee and F-Spot use 2.0
	anyway, so this won't be an issue but will provide us with a few
	extra features.

	* NEWS: updated

2007-01-30  Patrick van Staveren  <trick@vanstaveren.us>

	* src/*: moved everything to a new namespace,
	Gphoto2.Base and moved all files into subdir.

	* configure.ac: bump to 2.3.99.0.trunk.

	* NEWS, TODO: updated.
