@@ -1,3 +1,8 @@
+2007-09-06  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* src/Base/Context.cs: Added safety check to make sure the context was
+	  actually created
+
 2007-09-05  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* src/Base/Camera.cs: Made the interop methods private as opposed to
